update text and labels

--- a/resources/app-templates/leocdp-admin/modules/customer/customer-profile-editor.html
+++ b/resources/app-templates/leocdp-admin/modules/customer/customer-profile-editor.html
@@ -617,9 +617,9 @@
                 </div>
 			</div>
 			
-			<!-- tab 10 Data Authorization  -->
+			<!-- tab 10 User Authorization  -->
 			<div class="tab-pane" id="panel_profile_data_authorization" >
-				<h4 class="highlight_text" > <i class="fa fa-lock" aria-hidden="true"></i> Data Authorization </h4>
+				<h4 class="highlight_text" > <i class="fa fa-lock" aria-hidden="true"></i> User Authorization </h4>
 				<div class="form-group row"  >
 					<label class="control-label col-sm-3" for="authorizedProfileViewers">Authorized users can view data</label>
 					<div class="col-sm-9" >
