--- a/resources/app-templates/leocdp-admin/modules/customer/customer-profile-info.html
+++ b/resources/app-templates/leocdp-admin/modules/customer/customer-profile-info.html
@@ -723,7 +723,7 @@
 		                	<li><a href="#tab_profile_marketing_data" data-toggle="tab"> <i class="fa fa-info-circle" aria-hidden="true"></i> Marketing Info </a></li>
 		                	<li><a href="#tab_profile_sale_sources" data-toggle="tab"> <i class="fa fa-info-circle" aria-hidden="true"></i> Sale Sources </a></li>
 		                	<li><a href="#tab_profile_custom_fields" data-toggle="tab"> <i class="fa fa-table" aria-hidden="true"></i> Custom Fields </a></li>
-		                	<li><a href="#tab_profile_data_authorization" data-toggle="tab"> <i class="fa fa-lock" aria-hidden="true"></i> Data Authorization </a></li>
+		                	<li><a href="#tab_profile_data_authorization" data-toggle="tab"> <i class="fa fa-lock" aria-hidden="true"></i> User Authorization </a></li>
 		                </ul>
 		                
 		                <div id="profile_ext_info_vertital_tabs" class="tab-content col-md-10" >
@@ -951,7 +951,7 @@
 		                    
 		                   <div class="tab-pane" id="tab_profile_data_authorization" >
 				               <!-- profile info tab 6 -->
-				               <h4 class="highlight_text" > <i class="fa fa-lock" aria-hidden="true"></i> Data Authorization </h4>
+				               <h4 class="highlight_text" > <i class="fa fa-lock" aria-hidden="true"></i> User Authorization </h4>
 							   <table border=0 class="underlined" style="width: 100%;">
 				                   <tr>
 				                       <td>
