--- a/resources/app-templates/leocdp-admin/modules/journey/customer-journey-flow.html
+++ b/resources/app-templates/leocdp-admin/modules/journey/customer-journey-flow.html
@@ -64,10 +64,10 @@
        			<a href="javascript:" data-target-tab="panel_journey_data_report"  > <i class="fa fa-bar-chart aria-hidden="true"></i> Analytics Report  </a>
        		</li>
        		<li id="tab_journey_data_observers" style="display: none">
-       			<a href="javascript:" data-target-tab="panel_data_observers"  > <i class="fa fa-list" aria-hidden="true"></i> Data Observer </a>
+       			<a href="javascript:" data-target-tab="panel_data_observers"  > <i class="fa fa-list" aria-hidden="true"></i> Event Observer </a>
        		</li>
        		<li id="tab_journey_data_authorization" style="display: none">
-       			<a href="javascript:" data-target-tab="panel_journey_data_authorization"  > <i class="fa fa-lock" aria-hidden="true"></i> Data Authorization </a>
+       			<a href="javascript:" data-target-tab="panel_journey_data_authorization"  > <i class="fa fa-lock" aria-hidden="true"></i> User Authorization </a>
        		</li>
 		</ul>
 
@@ -108,10 +108,10 @@
 		        </div>
 			</div>
 			
-			<!-- tab 4 Data Authorization  -->
+			<!-- tab 4 User Authorization  -->
 			<div class="tab-pane" id="panel_journey_data_authorization" >
 				<div class="top_page_header" >
-					<h4> Data Authorization for the Data Journey: <span id="authorizedJourneyName"></span> </h4>
+					<h4> User Authorization for the Data Journey: <span id="authorizedJourneyName"></span> </h4>
 				</div>
 		        <div class="col-lg-12">
 		            <div class="form-group row"  >
@@ -137,7 +137,7 @@
 					</div>
 					<div class="form-group text-right"  >
 						<button type="button" class="btn btn-success" onclick="saveJourneyDataAuthorization()"  > 
-							<i class="fa fa-check-square-o" aria-hidden="true"></i> Update Data Authorization
+							<i class="fa fa-check-square-o" aria-hidden="true"></i> Update User Authorization
 						</button>
 					</div>
 		        </div>
