--- a/resources/app-templates/leocdp-admin/modules/journey/customer-journey-flow.html
+++ b/resources/app-templates/leocdp-admin/modules/journey/customer-journey-flow.html
@@ -93,7 +93,7 @@
 				
 				<!-- Event Observer Bar Chart -->
             	<div class="col-lg-12">
-					<h4 class="highlight_text" > <i class="fa fa-info-circle" aria-hidden="true"></i> Observer Data Report </h4> 
+					<h4 class="highlight_text" > <i class="fa fa-info-circle" aria-hidden="true"></i> Top Observable Data Sources </h4> 
 					<div id="journeyObserverChart" class="col-lg-12"> </div>
 				</div>	
 			</div>
