update new features

--- a/resources/app-templates/leocdp-admin/main-view.html
+++ b/resources/app-templates/leocdp-admin/main-view.html
@@ -84,7 +84,7 @@
 					</li>
 					<li>
 						<a id="Event_Data_Report" href="#calljs-leoCdpRouter('Event_Data_Report')" title="Event Data Report" > 
-							<i class="fa fa-fw fa-bar-chart"></i> Event Data Report </a>
+							<i class="fa fa-fw fa-line-chart"></i> Event Data Report </a>
 					</li>
 					<li>
 						<a id="CX_Data_Report" href="#calljs-leoCdpRouter('CX_Data_Report')" title="CX Data Report"  > 
