--- a/resources/app-templates/leocdp-admin/modules/system/login-account-editor.html
+++ b/resources/app-templates/leocdp-admin/modules/system/login-account-editor.html
@@ -109,6 +109,7 @@ div.panel_header {
 	                        <option value="investor"> Investor </option>
 	                        <option value="data_engineering_team"> Data Engineering </option>
 	                        <option value="data_science_team"> Data Science </option>
+	                        <option value="devops_team"> DevOps / DataOps </option>
 	                        <option value="ai_team"> A.I team </option>
 	                        <option value="marketing"> Marketing </option>
 	                        <option value="market_research"> Market Research </option>
@@ -117,14 +118,14 @@ div.panel_header {
 	                        <option value="pr_operation"> PR Operation </option>
 	                        <option value="product_operation"> Product Operation </option>
 	                        <option value="engineering"> Product Engineering </option>
-	                        <option value="product_rnd"> Product R&D  </option>
-	                        <option value="logistics"> Logistics </option>
+	                        <option value="product_rnd"> Product R&D Development </option>
+	                        <option value="logistics"> Logistics / Product Delivery </option>
 	                        <option value="customer_support"> Customer Support </option>
 	                        <option value="trading"> Trading </option>
 	                        <option value="purchasing"> Purchasing </option>
-	                        <option value="sales_team"> Sales team </option>
+	                        <option value="sales_team"> Sales </option>
 	                        <option value="tech"> IT / Technology Support </option>
-	                        <option value="media_agency"> Media Agency </option>
+	                        <option value="media_agency"> Media Marketing Agency </option>
 	                        <option value="sales_agent"> Sales Agent / Sales Representative </option>
 	                    </select>
 	                </div>
@@ -195,7 +196,7 @@ div.panel_header {
 						    <div class="col-lg-12">
 						    	<div class="checkbox">
 								  <label style="font-weight: bold;">
-								  	<input type="checkbox" id="updateAllProfilesInJourney" checked="checked"> Update data authorization of all profiles for updated data journey map
+								  	<input type="checkbox" id="updateAllProfilesInJourney" checked="checked"> Update user authorization for all profiles in the updated journey map
 								  </label>
 								</div>
 						        <div class="table-responsive">
