--- a/resources/app-templates/leocdp-admin/modules/journey/customer-journey-flow.html
+++ b/resources/app-templates/leocdp-admin/modules/journey/customer-journey-flow.html
@@ -111,7 +111,7 @@
 			<!-- tab 4 User Authorization  -->
 			<div class="tab-pane" id="panel_journey_data_authorization" >
 				<div class="top_page_header" >
-					<h4> User Authorization for the Data Journey: <span id="authorizedJourneyName"></span> </h4>
+					<h4> User Authorization of <span id="authorizedJourneyName"></span> </h4>
 				</div>
 		        <div class="col-lg-12">
 		            <div class="form-group row"  >
@@ -132,7 +132,7 @@
 					</div>
 					<div class="checkbox">
 					  <label style="font-weight: bold;">
-					  	<input type="checkbox" id="updateAllProfilesInJourney" checked="checked"> Update data authorization of all profiles for updated data journey map
+					  	<input type="checkbox" id="updateAllProfilesInJourney" checked="checked"> Update data authorization for all profiles in this journey map
 					  </label>
 					</div>
 					<div class="form-group text-right"  >
@@ -186,7 +186,7 @@
     	var callback = function(touchpointCount){
     		var maxSize = touchpointCount * 3;
     		loadJourneyTouchpointHubReport(currentJourneyMapId, maxSize)
-    		loadJourneyMapEventMatrix(currentJourneyMapId)
+    		loadJourneyMapEventMatrix(currentJourneyMapId, 'journey_map_event_matrix')
     	}
 		loadJourneyMapAndTouchpointHubs(currentJourneyMapId, '#journeyFlowChart', '#journeyMapName, #authorizedJourneyName', "#touchpoint_hub_table", callback);
 		
