increase user session, expired after 14 days

--- a/resources/app-templates/leocdp-admin/index.html
+++ b/resources/app-templates/leocdp-admin/index.html
@@ -70,6 +70,9 @@
 	<script src="https://{{baseStaticUrl}}/js/utils/jquery.js?_={{cacheBustingKey}}"></script>
 	<script src="https://{{baseStaticUrl}}/js/utils/jquery-ui.min.js?_={{cacheBustingKey}}"></script>
 	
+	<!-- lscache for HTML5 localStorage -->
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/lscache/1.3.2/lscache.min.js"></script>	
+	
 	<!-- Bootstrap Core JavaScript -->
 	<script src="https://{{baseStaticUrl}}/js/utils/bootstrap.min.js?_={{cacheBustingKey}}"></script>
 	<script src="https://{{baseStaticUrl}}/js/utils/bootstrap-transition.js?_={{cacheBustingKey}}"></script>
@@ -95,8 +98,7 @@
 	<!-- utils  -->
 	<script src="https://{{baseStaticUrl}}/js/utils/validator.js?_={{cacheBustingKey}}"></script>
 	<script src="https://{{baseStaticUrl}}/js/utils/md5.js?_={{cacheBustingKey}}"></script>
-	<script src="https://{{baseStaticUrl}}/js/utils/lscache.js?_={{cacheBustingKey}}"></script>	
-
+	
 	<!-- Trix - Rich Text Editor -->
 	<link href="https://{{baseStaticUrl}}/js/trix-editor/trix.min.css?_={{cacheBustingKey}}" rel="stylesheet">
 	<script src="https://{{baseStaticUrl}}/js/trix-editor/trix.js?_={{cacheBustingKey}}"></script>
