--- a/resources/app-templates/leocdp-admin/modules/analytics/event-data-dashboard.html
+++ b/resources/app-templates/leocdp-admin/modules/analytics/event-data-dashboard.html
@@ -125,8 +125,8 @@
     function loadEventMatrixSummaryReport(){
     	setTimeout(function(){
     		var params = getDateFilterValues();
-    		var beginFilterDate = new moment( params.beginFilterDate).format(defaultDateFormat);
-    		var endFilterDate = new moment( params.endFilterDate).format(defaultDateFormat);
+    		var beginFilterDate = params.beginFilterDate;
+    		var endFilterDate = params.endFilterDate;
     		loadJourneyMapEventMatrix(currentJourneyMapId, 'event_data_metrix_report', beginFilterDate, endFilterDate)
     	}, 1200)
     }
@@ -135,6 +135,8 @@
     var loadEventDailyReportUnit = function(refresh){
     		
     	var params = getDateFilterValues();
+		var beginFilterDate = new moment( params.beginFilterDate).format(defaultDateFormat);
+		var endFilterDate = new moment( params.endFilterDate).format(defaultDateFormat);
     	params['journeyMapId'] = currentJourneyMapId;
     	
     	var beginReportDate = params.beginFilterDate;
