--- a/resources/app-templates/leocdp-admin/main-view.html
+++ b/resources/app-templates/leocdp-admin/main-view.html
@@ -118,15 +118,11 @@
 				<ul id="customer_hub_menu" class="collapse in" aria-expanded="true">
 					<li id="Profile_Management_Menu" >
 						<a id="Profile_Management" href="#calljs-leoCdpRouter('Profile_Management')" title="All Customer Profiles" > 
-							<i class="fa fa-fw fa-users"></i> Profile Management </a>
+							<i class="fa fa-fw fa-address-card-o"></i> Profile Management </a>
 					</li>
 					<li id="Segment_Management_Menu" >
 						<a id="Segment_Management" href="#calljs-leoCdpRouter('Segment_Management')" title="All Customer Segments"> 
 							<i class="fa fa-object-group" aria-hidden="true"></i> Segment Management </a>
-					</li>
-					<li id="Account_Management_Menu" style="display: none;" >
-						<a id="Account_Management" href="#calljs-leoCdpRouter('Business_Account_Management')" title="All Business Accounts" > 
-							<i class="fa fa-fw fa-briefcase"></i> Business Accounts </a>
 					</li>
 				</ul>
 			</li>
@@ -144,6 +140,10 @@
 					<li id="Connector_Management_Menu" >
 						<a id="Connector_Management" href="#calljs-leoCdpRouter('Connector_Management')">
 							<i class="fa fa-fw fa-exchange" aria-hidden="true" ></i> Connector Management</a>
+					</li>
+					<li id="Campaign_Management_Menu" style="display: none" >
+						<a id="Connector_Management" href="#calljs-leoCdpRouter('Campaign_Management')">
+							<i class="fa fa-fw fa-envelope-o" aria-hidden="true" ></i> Campaign Management</a>
 					</li>
 				</ul>
 			</li>
