--- a/resources/app-templates/leocdp-admin/modules/activation/campaign-list.html
+++ b/resources/app-templates/leocdp-admin/modules/activation/campaign-list.html
@@ -14,8 +14,7 @@
 		</button>
 	</div>
 	<div class="col-lg-12">
-		<h4 > All Direct-to-Customer (D2C) Marketing Campaigns <a href="https://en.wikipedia.org/wiki/Direct-to-consumer" target="_blank" > <i class="fa fa-info-circle" aria-hidden="true"></i>
-		 </a> </h4> 
+		<h4> <i class="fa fa-fw fa-envelope-o" aria-hidden="true" ></i>  Data Activation Campaigns </h4> 
 		 <b class="highlight_text"> This feature is still under development </b>
 	</div>
 </div>
@@ -35,7 +34,7 @@
                         <th>Updated at</th>
                         <th>Last run </th>
                         <th>Targeted Segments</th>
-                        <th>Cost / Revenue</th>
+                        <th>Estimated Cost</th>
                         
                         <th>Actions</th>
                     </tr>
