--- a/resources/app-templates/web-form/template-survey-form.html
+++ b/resources/app-templates/web-form/template-survey-form.html
@@ -88,7 +88,6 @@
 		// feedback form template 
 		window.refTemplateId = "{{customData.templateId}}";	
 		window.feedbackTypeAsText = "{{customData.feedbackTypeAsText}}";
-		
 		window.containerIframeId = leoObserverId + "_" + refTemplateId;
     
 		var preview = {{customData.preview}};
@@ -107,12 +106,11 @@
 			} else {
 				window.srcTouchpointUrl = encodeURIComponent(location.protocol + '//' + location.host + location.pathname);
 			}
-		
+			// leo proxy JS
 			var leoproxyJsPath = '/js/leo-observer/leo.proxy.min.js';
 			if(isDev) {
 				leoproxyJsPath = '/js/leo-observer/leo.proxy.js';
 			}
-			
 		    var src = location.protocol + '//' + window.leoObserverCdnDomain + leoproxyJsPath;
 		    var jsNode = document.createElement('script');
 		    jsNode.async = true;
@@ -124,7 +122,7 @@
 		function leoObserverProxyReady(session) {
 		    //LEO is ready, record event data if not in preview iframe
 		    if(location.href.indexOf("preview=1") === -1){
-		    	LeoObserverProxy.recordViewEvent("accept-tracking");
+		    	LeoObserverProxy.recordViewEvent("survey-view");
 		    } 
 		    else {
 		    	// set width for preview mode in admin
