update default CSS url

--- a/resources/app-templates/content-hub/index.html
+++ b/resources/app-templates/content-hub/index.html
@@ -30,13 +30,13 @@
   <script src="https://unpkg.com/ionicons@5.0.0/dist/ionicons.js"></script>
 
   <!-- Vendor CSS Files -->
-  <link href="https://uspa.tech/theme-static-resources/bootstrap.min.css" rel="stylesheet">
-  <link href="https://uspa.tech/theme-static-resources/owl.carousel.min.css" rel="stylesheet">
-  <link href="https://uspa.tech/theme-static-resources/venobox.css" rel="stylesheet">
-  <link href="https://uspa.tech/theme-static-resources/aos.css" rel="stylesheet">
+  <link href="https://leocdp.com/resources/bootstrap.min.css" rel="stylesheet">
+  <link href="https://leocdp.com/resources/owl.carousel.min.css" rel="stylesheet">
+  <link href="https://leocdp.com/resources/venobox.css" rel="stylesheet">
+  <link href="https://leocdp.com/resources/aos.css" rel="stylesheet">
 
   <!-- Template Main CSS File -->
-  <link href="https://uspa.tech/theme-static-resources/style.css" rel="stylesheet">
+  <link href="https://leocdp.com/resources/style.css" rel="stylesheet">
 
 </head>
 
