--- a/resources/app-templates/web-form/template-survey-form.html
+++ b/resources/app-templates/web-form/template-survey-form.html
@@ -37,6 +37,10 @@
 	
 	<!-- MarkDown parser -->
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/marked/4.0.18/marked.min.js" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+
+	<!-- BEGIN headCode -->
+	{{{customData.headCode}}}
+	<!-- END headCode -->
 </head>
 <body style="background-color:transparent;" >
 	
