--- a/resources/app-templates/leocdp-admin/modules/customer/segment-details.html
+++ b/resources/app-templates/leocdp-admin/modules/customer/segment-details.html
@@ -219,7 +219,8 @@
 								<i class="fa fa-check" aria-hidden="true"></i> Generate & Copy URL 
 							</button>
 							<div class="segment_download_link" >
-								<a id="ahref_exported_excel_csv" style="display: none;" target="_blank" > Click here to download </a>
+								<a id="ahref_exported_excel_csv" style="display: none;" target="_blank" > <i class="fa fa-cloud-download" aria-hidden="true"></i> 
+									Click to download </a>
 							</div>
 						</div>
 					</div>
@@ -235,7 +236,8 @@
 								<i class="fa fa-check" aria-hidden="true"></i> Generate & Copy URL 
 							</button>
 							<div class="segment_download_link">
-								<a id="ahref_exported_facebook_csv" style="display: none;" target="_blank" > Click here to download </a>
+								<a id="ahref_exported_facebook_csv" style="display: none;" target="_blank" > <i class="fa fa-cloud-download" aria-hidden="true"></i> 
+									Click to download </a>
 							</div>
 						</div>
 					</div>
