user can subscribe newsletter form

--- a/resources/app-templates/leocdp-admin/modules/asset/group-details.html
+++ b/resources/app-templates/leocdp-admin/modules/asset/group-details.html
@@ -68,9 +68,7 @@
             <div class="panel-body">
                 <table id="item_list_holder" class="display" style="width:100%">
                     <thead>
-                        <tr id="item_list_fields">
-                            
-                        </tr>
+                        <tr id="item_list_fields"></tr>
                     </thead>
                 </table>
             </div>
